# strategy-coach-app

./: .coveragerc  .env.example  .gitignore  ANALYSIS_EXPLICIT_AGENT_REQUESTS.md  ARCHITECTURE_COMPARISON_LANGGRAPH_SUPERVISOR.md  CLAUDE.md  Dockerfile  FEATURE_GAMIFICATION_STRATEGIC_GAMES.md  IMPLEMENTATION_GUIDE_MISTRAL.md  ISSUE_CURSOR_FOCUS.md  ISSUE_LOGIC_AGENT_COGNITIVE_BIAS.md  ISSUE_QUESTION_QUALITY.md  Makefile  README.md  docker-compose.yml  logging.yaml  pyproject.toml  pytest.ini  requirements.txt  test_bias_improvements.py
.claude/rules/: generate-tasks.md
.claude/tasks/: prd-multi-agent-strategy-coach.md  prd-strategy-coach-app.md  task-9-gamification-system.md  tasks-prd-multi-agent-strategy-coach.md  tasks-prd-strategy-coach-app.md  technical-design-document.md
.claude/technical-documentation/: Workflow And Agents.md  langgraph-dcumantation.md
.github/workflows/: evaluation.yml
agents/analogy-agent-docs/: analogy-agent.md
agents/open-strategy-agent-docs/: open-strategy-agent.md
agents/strategy-logic-agent-docs/: strategy-logic-agent.md
agents/strategy-maps-agent-docs/: strategy-map-agent.md
agents/why-agent-docs/: why-agent.md
data/sessions/: .gitkeep
frontend/: index.html
issues/: FEATURE_ACHIEVEMENT_BADGES.md  FEATURE_CONVERSATION_PERSISTENCE.md  FEATURE_TESTING_AGENT_USER_JOURNEY.md  ISSUE_14_ANALYSIS_DEEPER_PROBLEM.md  ISSUE_AI_ASSUMES_USER_AGREEMENT.md  ISSUE_AI_COACH_SYNTHESIS_VALIDATION_LOOP.md  ISSUE_DUPLICATE_INTERACTIVE_SELECTIONS.md  ISSUE_DUPLICATE_MESSAGES.md  ISSUE_INAPPROPRIATE_INTERACTIVE_ELEMENTS.md  ISSUE_INTERACTIVE_SELECTION.md  ISSUE_LANGGRAPH_SUPERVISOR_INTEGRATION.md  ISSUE_SIMPLE_TESTING_AGENT_MESSAGE_EXTRACTION.md
scripts/: setup_env.py  test_google_gemini.py  test_interactive_selection.py  test_logging.py
src/: __init__.py
src/agents/: __init__.py  analogy_agent.py  logic_agent.py  open_strategy_agent.py  orchestrator.py  router.py  strategy_map_agent.py  synthesizer.py  why_agent.py  why_node.py
src/api/: endpoints.py  main.py  middleware.py
src/core/: config.py  graph.py  models.py  routing.py  state.py
src/models/: __init__.py  state.py
src/testing/: __init__.py  business_case.py  business_case_parser.py  cli.py  html_report_generator.py  interaction_logger.py  journey_recorder.py  journey_simulator.py  report_generator.py  safety_config.py  screenshot_manager.py  testing_agent.py  why_phase_tester.py
src/utils/: __init__.py  config.py  llm_client.py  logging_config.py  prompts.py  response_formatters.py
testing/business-cases/: README.md
testing/reports/why_phase/test_report_20250817_153509/: index.html
testing/reports/why_phase/test_report_20250817_155724/: index.html
testing/reports/why_phase/test_report_20250817_160509/: index.html
testing/reports/why_phase/test_report_20250817_182847/: index.html
testing/reports/why_phase/why_phase_complete_validation_report/: index.html
testing/reports/why_phase/why_phase_final_success_report/: index.html
testing/reports/why_phase/why_phase_report_20250817_150020/: index.html
testing/reports/why_phase/why_phase_report_20250817_150540/: index.html
testing/reports/why_phase/why_phase_report_20250817_151006/: index.html
testing/reports/why_phase/why_phase_report_20250817_151701/: index.html
testing/reports/why_phase_report_20250817_143544/: index.html
testing/reports/why_phase_report_20250817_145200/: index.html
testing/reports/why_phase_report_20250817_145323/: index.html
testing/reports/why_phase_report_20250817_151111/: index.html
testing/reports/why_phase_report_20250817_151416/: index.html
testing/reports/why_phase_test_20250817_153151/: index.html
tests/: Business Case Generation for AI Coach Testing.md  conftest.py  simple_testing_agent.py  test_basic.py  test_config.py  test_config_simple.py  test_message_extraction.py
tests/agents/: test_analogy_agent.py  test_logic_agent.py  test_open_strategy_agent.py  test_orchestrator.py  test_router.py  test_strategy_map_agent.py  test_synthesizer.py  test_why_agent.py  test_why_node.py
tests/api/: test_integration.py
tests/core/: test_graph.py  test_models.py  test_routing.py  test_state.py
tests/evaluation/: README.md  requirements.txt  test_data_anti_consultancy_conversation.json  test_full_coaching_session_e2e.py  test_full_session_evaluation.py  test_playwright_anti_consultancy_journey.py
tests/evaluation/recordings/: journey_report_afas_software_enterprise_20250816_130957.html  journey_report_afas_software_enterprise_20250816_130957.json
tests/evaluation/simple_test_results/: AFAS_Software_Test_Report_20250816_143544.md  AFAS_Software_Test_Report_20250816_153456.md  AFAS_Software_Test_Report_20250816_163602.md  afas_software_test_20250816_143544.json  afas_software_test_20250816_153456.json  afas_software_test_20250816_163602.json
tests/models/: test_state.py  test_state_advanced.py
tests/testing/: __init__.py  test_testing_agent_validation.py
tests/utils/: test_config.py  test_logging_config.py  test_prompts.py  test_prompts_simple.py
web/: README.md  capture_demo_screenshots.py  demo.html  index.html  interactive-demo.html  playwright-test-report.md  serve.py  test_results.json  test_ui.py
